<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/place_description_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/place_title"
        android:layout_width="183dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="23dp"
        android:text="@string/place_title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/place_full_icon" />

    <ImageButton
        android:id="@+id/back_from_full_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="39dp"
        android:background="@android:color/transparent"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/review_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/place_full_icon"
        android:layout_width="188dp"
        android:layout_height="191dp"
        android:layout_above="@+id/scroll_place_description"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="47dp"
        app:layout_constraintBottom_toTopOf="@+id/scroll_place_description"
        app:layout_constraintEnd_toStartOf="@+id/place_title"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/unknown" />

    <ScrollView
        android:id="@+id/scroll_place_description"
        android:layout_width="384dp"
        android:layout_height="306dp"
        android:layout_above="@+id/review_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="15dp"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/back_from_full_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/place_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_description"
            android:textSize="16sp" />
    </ScrollView>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/place_title"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="40dp"
        android:layout_toStartOf="@+id/imageButton2"
        android:background="@color/white"
        android:src="@drawable/add_to_favour"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintStart_toEndOf="@+id/place_full_icon" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/place_title"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="40dp"
        android:layout_toStartOf="@+id/imageButton3"
        android:background="@color/white"
        android:src="@drawable/add_to_visited"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
        app:layout_constraintStart_toEndOf="@+id/imageButton" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/place_title"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:background="@color/white"
        android:src="@drawable/make_path"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton2" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/scroll_place_description"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="14dp"
        android:layout_toEndOf="@+id/place_full_icon"
        android:background="@color/white"
        android:src="@drawable/review_btn"
        app:layout_constraintBottom_toTopOf="@+id/scroll_place_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/place_full_icon" />

    <Button
        android:id="@+id/review_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="194dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="#673AB7"
        android:text="@string/reviews"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_from_full_info" />
</androidx.constraintlayout.widget.ConstraintLayout>